# pitest

./: .gitignore  index.html  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.ts
.github/workflows/: release.yml
scripts/: backfill-pi-session.mjs  prepare-pi-runtime.mjs  sync-pi-workspace.mjs
src/: App.tsx  main.tsx  splashscreen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/pi-workspace-template/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
src-tauri/resources/pi-workspace-template/memory/: 2026-02-26.md  2026-02-27-1129.md  2026-02-27.md
src-tauri/src/: lib.rs  main.rs  pi_rpc.rs
src/components/: embedded-terminal.tsx
src/components/ui/: alert-dialog.tsx  resizable.tsx  select.tsx  toast.tsx  tooltip.tsx
src/lib/: pi.ts  textarea-caret.ts  theme.ts
src/store/: desktop-store.ts  hooks.ts
src/styles/: globals.css
src/types/: redux-logger.d.ts
